--- a/mysite/templates/buttons.html
+++ b/mysite/templates/buttons.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+  {% load static %}
+
 <head>
 <title>Matrix Admin</title>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="stylesheet" href="css/bootstrap.min.css'%}" />
-<link rel="stylesheet" href="css/bootstrap-responsive.min.css'%}" />
-<link rel="stylesheet" href="css/fullcalendar.css'%}" />
-<link rel="stylesheet" href="css/matrix-style.css'%}" />
-<link rel="stylesheet" href="css/matrix-media.css'%}" />
+<link rel="stylesheet" href="{% static 'css/bootstrap.min.css'%}" />
+<link rel="stylesheet" href="{% static 'css/bootstrap-responsive.min.css'%}" />
+<link rel="stylesheet" href="{% static 'css/fullcalendar.css'%}" />
+<link rel="stylesheet" href="{% static 'css/matrix-style.css'%}" />
+<link rel="stylesheet" href="{% static 'css/matrix-media.css'%}" />
 <link href="font-awesome/css/font-awesome.css" rel="stylesheet" />
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800' rel='stylesheet' type='text/css'>
 </head>
@@ -563,9 +565,9 @@
 <!--end-Footer-part-->
 <!--end-Footer-part-->
 
-<script src="js/jquery.min.js"></script> 
-<script src="js/jquery.ui.custom.js"></script> 
-<script src="js/bootstrap.min.js"></script> 
-<script src="js/matrix.js"></script>
+<script src="{% static 'js/jquery.min.js'%}"></script> 
+<script src="{% static 'js/jquery.ui.custom.js'%}"></script> 
+<script src="{% static 'js/bootstrap.min.js'%}"></script> 
+<script src="{% static 'js/matrix.js'%}"></script>
 </body>
 </html>
