--- a/mysite/templates/crud.html
+++ b/mysite/templates/crud.html
@@ -22,6 +22,35 @@
           <button class="btn btn-primary form-control" type="submit">SUBMIT</button>
         </form>
       </div>
+
+
+         <table id="userTable" class="table table-striped">
+          <tr>
+            <th>Name</th>
+            <th>Address</th>
+            <th colspan="3">Age</th>
+          </tr>
+          {% if users %}
+          {% for user in userks %}
+          <tr id="user-{{user.id}}">
+              <td class="userName userData" name="name">{{user.name}}</td>
+              <td class="userAddress userData" name="address">{{user.domain}}</td>
+              <td class="userAge userData" name="age">{{user.age}}</td>
+              <td align="center">
+                  <button class="btn btn-success form-control" onClick="editUser({{user.id}})" data-toggle="modal" data-target="#myModal")">EDIT</button>
+              </td>
+              <td align="center">
+                  <button class="btn btn-danger form-control" onClick="deleteUser({{user.id}})">DELETE</button>
+              </td>
+          </tr>
+          {% endfor %}
+          {% else %}
+            No Users
+          {% endif %}
+        </table>
+
+
+
       <div class="col-md-8">
         <h3>USERS</h3>
         <table id="userTable" class="table table-striped">
@@ -80,61 +109,42 @@
 {% endblock %}
 {% block javascript %}
 <script>
-$("form#updateUser").submit(function() {
-    var idInput = $('input[name="formId"]').val().trim();
-    var nameInput = $('input[name="formName"]').val().trim();
-    var addressInput = $('input[name="formAddress"]').val().trim();
-    var ageInput = $('input[name="formAge"]').val().trim();
-    console.log("this is a log for the console")
-    if (nameInput && addressInput && ageInput) {
-        // Create Ajax Call
-        $.ajax({
-            url: '{% url "crud_ajax_update" %}',
-            data: {
-                'id': idInput,
-                'name': nameInput,
-                'domain': addressInput,
-                'age': ageInput
-            },
-            dataType: 'json',
-            success: function (data) {
-                if (data.user) {
-                  updateToUserTabel(data.user);
-                }
-            }
-        });
-       } else {
-        alert("All fields must have a valid value.");
-    }
-    $('form#updateUser').trigger("reset");
-    $('#myModal').modal('hide');
-    return false;
-});
 
 // Update Django Ajax Call
 function editUser(id) {
-  if (id) {
-    tr_id = "#user-" + id;
-    name = $(tr_id).find(".userName").text();
-    domain = $(tr_id).find(".userAddress").text();
-    age = $(tr_id).find(".userAge").text();
-    $('#form-id').val(id);
-    $('#form-name').val(name);
-    $('#form-address').val(domain);
-    $('#form-age').val(age);
+ 
+    $.ajax({
+      url : '{% url "crud_ajax" %}',
+      type: 'POST',
+      dataType: 'json',
+      data : {'name':"stuff",}
+    });
   }
-}
-function updateToUserTabel(user){
-    $("#userTable #user-" + user.id).children(".userData").each(function() {
-        var attr = $(this).attr("najme");
-        if (attr == "naome") {
-          $(this).text(user.name);
-        } else if (attr == "domain") {
-          $(this).text(user.domain);
-        } else {
-          $(this).text(user.age);
-        }
-      });
-}
+
+
+$.ajaxSetup({ 
+     beforeSend: function(xhr, settings) {
+         function getCookie(name) {
+             var cookieValue = null;
+             if (document.cookie && document.cookie != '') {
+                 var cookies = document.cookie.split(';');
+                 for (var i = 0; i < cookies.length; i++) {
+                     var cookie = jQuery.trim(cookies[i]);
+                     // Does this cookie string begin with the name we want?
+                     if (cookie.substring(0, name.length + 1) == (name + '=')) {
+                         cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                         break;
+                     }
+                 }
+             }
+             return cookieValue;
+         }
+         if (!(/^http:.*/.test(settings.url) || /^https:.*/.test(settings.url))) {
+             // Only send the token to relative URLs i.e. locally.
+             xhr.setRequestHeader("X-CSRFToken", getCookie('csrftoken'));
+         }
+     } 
+});
+
 </script>
 {% endblock javascript %}
